Update README.md and AGENTS.md with recent achievements and features - Documented improved HTTP parser robustness and strict method validation. - Added notes on enhanced client.assert() handling for null/undefined values. - Updated achievements to include JVM native access configuration and variable resolution improvements. - Reflected the latest database schema changes in cardealer.http documentation.
Co-authored-by: Junie <junie@jetbrains.com>